# RBT1001

./: .gitignore  README.md
.devcontainer/: devcontainer.json  run.sh
.devcontainer/control/: Dockerfile  devcontainer.json  run.sh
.devcontainer/gazebo/: Dockerfile  devcontainer.json  run.sh
.devcontainer/viz/: devcontainer.json
.docker/: Dockerfile
.github/workflows/: README.md  docker-image.yml
src/: README.md
src/fanuc_cr7ia_moveit_config/: CMakeLists.txt  package.xml
src/fanuc_cr7ia_moveit_config/launch/: demo.launch  move_group.launch  planning_context.launch
src/mecharm_description/: CMakeLists.txt  package.xml
src/mecharm_gazebo/: CMakeLists.txt  package.xml
src/mecharm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robots_description/: CMakeLists.txt  package.xml
src/utils/: package.xml  setup.cfg  setup.py
src/week1/: package.xml  random_arm_controller.py  setup.cfg  setup.py  turtles_controller.py
src/week2/: package.xml  setup.cfg  setup.py
src/week3/: package.xml  setup.cfg  setup.py
src/week3/config/: exercise_viz.rviz
src/week3/description/urdf/: 6dof.urdf.xacro  mecharm_270_m5.urdf.xacro  rrbot.urdf.xacro
src/week3/launch/: view_robot.launch.py
src/week3/scripts/: transformations.py
src/week4/: CMakeLists.txt  direct_kinematics.py  package.xml  setup.cfg  setup.py
src/week5/: TODO.txt
src/week6/: compute_ik.py  inverse_kinematics_analytic.py  inverse_kinematics_analytic_hints.py  inverse_kinematics_moveit.py
src/week8/: direct_kinematics.py  inverse_kinematics_analytic.py  jacobian.py  (+1 more)
(+88 files in other folders)
