<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week3</name>
  <version>0.0.0</version>
  <description>Week 3 of RBT1001</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>

  <author email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>robots_description</exec_depend> -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
